USER 조회, 생성 API 구현
