# user/serializers/UserResponseSerializer.py
@@ -1,0 +1,7 @@
+from rest_framework.serializers import ModelSerializer
+from user.models import User
+
+class UserResponseSerializer(ModelSerializer):
+    class Meta:
+        model = User
+        fields = ['id', 'email', 'username']
